--- a/projehaber/templates/index.html
+++ b/projehaber/templates/index.html
@@ -1,65 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Base</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% load static %}
+{% block title %} {{ setting.title}} - Anasayfa {% endblock title %}
+{% block page_description %} {{ setting.description}} {% endblock page_description %}
+{% block page_keywords %} rifatrahvali, haber, projehaber, proje, ismek {% endblock page_keywords %}
+{% block extracss %}{% endblock extracss %}
+{% block content %}
+<!-- Slaytlar -->
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        {% for slider in sliders %}
+        {% if forloop.first %}
+        <div class="carousel-item active">
+            <img src="{% get_media_prefix %}{{ slider.image }}" class="d-block w-100" alt="{{ slider.title }}">
+        </div>
+        {% else %}
+        <div class="carousel-item">
+            <img src="{% get_media_prefix %}{{ slider.image }}" class="d-block w-100" alt="{{ slider.title }}">
+        </div>
+        {% endif %}
+        {% endfor %}
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Geri</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">İleri</span>
+    </button>
+</div>
+<!-- Haberler -->
+<div class="row mt-4 mb-5">
+    <div class="row">
+        <div class="col-md-12">
+            <h2>Haberler</h2>
+        </div>
+    </div>
+    <div class="row">
+        <!-- Haberler Kartı -->
+        {% for newsone in News %}
+        <!-- Haber Kartı -->
+        <div class="col-md-3 mt-3 mb-3">
+            <div class="card" style="width: 18rem;">
 
-<header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">Proje Haber</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Anasayfa</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Hakkımızda</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Hizmetler</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Bloglar</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">İletişim</a>
-                    </li>
-                </ul>
-                <div class="d-flex">
-                    <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="languageDropdown"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Dil
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="languageDropdown">
-                            <li><a class="dropdown-item" href="#">Türkçe</a></li>
-                            <li><a class="dropdown-item" href="#">İngilizce</a></li>
-                        </ul>
-                    </div>
-                    <form class="d-flex ms-3">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-light" type="submit">Arama</button>
-                    </form>
+                <img src="{% get_media_prefix %}{{ newsone.image }}" class="card-img-top" alt="Blog Gorsel">
+                <div class="card-body">
+                    <h5 class="card-title">{{ newsone.title }}</h5>
+                    <p class="card-text">
+                        {{newsone.context|safe|truncatechars:100}}
+                    </p>
+                    <a href="{% url 'news-detail' slug=newsone.slug %}" class="btn btn-primary">Detaylar</a>
                 </div>
             </div>
         </div>
-        </div>
-    </nav>
-</header>
-<main>
+        {% endfor %}
+    </div>
+</div>
 
-</main>
-<footer>
 
-</footer>
-    
-</body>
-</html>
+{% endblock content %}
