--- a/projehaber/templates/contacts.html
+++ b/projehaber/templates/contacts.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %} Servisler - Duyurular - PROJEHABER {% endblock title %}
+{% block title %} İletişim - PROJEHABER {% endblock title %}
 {% block page_description %} Ismek Kurs Projesi - PROJE HABER {% endblock page_description %}
 {% block page_keywords %} rifatrahvali, haber, projehaber, proje, ismek {% endblock page_keywords %}
 {% block extracss %}{% endblock extracss %}
@@ -27,7 +27,7 @@
                 <label for="message" class="form-label">* Mesaj</label>
                 <textarea name="message" id="message" class="form-control" rows="4" required></textarea>
             </div>
-            <a href="#" class="btn btn-primary w-100">Gönder</a>
+            <a href="#" class="btn btn-dark w-100">Gönder</a>
         </div>
     </div>
 </div>
