--- a/projehaber/templates/includes/sidebar.html
+++ b/projehaber/templates/includes/sidebar.html
@@ -24,7 +24,7 @@
                                 <div class="mb-3">
                                     <input type="text" name="q" class="form-control" placeholder="Arama Bölümü">
                                 </div>
-                                <button type="submit" class="w-100 btn btn-primary">Haber & İçerik Ara</button>
+                                <button type="submit" class="w-100 btn btn-dark">Haber & İçerik Ara</button>
                             </form>
                         </div>
                     </div>
