--- a/projehaber/templates/index.html
+++ b/projehaber/templates/index.html
@@ -49,7 +49,7 @@
                     <p class="card-text">
                         {{newsone.context|safe|truncatechars:100}}
                     </p>
-                    <a href="{% url 'news-detail' slug=newsone.slug %}" class="btn btn-primary">Detaylar</a>
+                    <a href="{% url 'news-detail' slug=newsone.slug %}" class="btn btn-dark">Detaylar</a>
                 </div>
             </div>
         </div>
