--- a/projehaber/templates/news-search.html
+++ b/projehaber/templates/news-search.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %} Servisler - Duyurular - PROJEHABER {% endblock title %}
+{% block title %} icerik ara - PROJEHABER {% endblock title %}
 {% block page_description %} Ismek Kurs Projesi - PROJE HABER {% endblock page_description %}
 {% block page_keywords %} rifatrahvali, haber, projehaber, proje, ismek {% endblock page_keywords %}
 {% block extracss %}{% endblock extracss %}
